Edit Project Config
Change-Id: Ie2176e7d027717c280b2ad04b694041c08c8bf70

--- a/project.config
+++ b/project.config
@@ -3,18 +3,18 @@
 [access "refs/*"]
 	owner = group user/Alexey Galkin (molecul)
 [access "refs/for/refs/*"]
-	read = group user/Alexey Galkin (molecul)
-	push = group user/Alexey Galkin (molecul)
-	label-Code-Review = -2..+2 group user/Alexey Galkin (molecul)
-	label-Verified = -1..+1 group user/Alexey Galkin (molecul)
-	rebase = group user/Alexey Galkin (molecul)
-	removeReviewer = group user/Alexey Galkin (molecul)
-	submit = group user/Alexey Galkin (molecul)
+	read = group qa_portal_dev
+	push = group qa_portal_dev
+	label-Code-Review = -2..+2 group qa_portal_dev
+        laber-Verified = -1..+1 group qa_portal_dev
+	rebase = group qa_portal_dev
+        removeReviewer = group qa_portal_dev
+        submit = group qa_portal_dev
 [access "refs/heads/*"]
-	read = group user/Alexey Galkin (molecul)
-	create = group user/Alexey Galkin (molecul)
-	push = +force group user/Alexey Galkin (molecul)
-	pushMerge = group user/Alexey Galkin (molecul)
+	read = group qa_portal_dev
+        create = group qa_portal_dev
+	push = +force qa_portal_dev
+        pushMerge = group qa_portal_dev
 [access "refs/tags/*"]
-	push = group user/Alexey Galkin (molecul)
-	push = +force group user/Alexey Galkin (molecul)
+	push = group qa_portal_dev
+        push = +force group qa_portal_dev
