Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,20 +1,32 @@
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
+	owner = group qa_portal_dev
 	owner = group user/Alexey Galkin (molecul)
 [access "refs/for/refs/*"]
+	read = group qa_portal_dev
 	read = group user/Alexey Galkin (molecul)
+	push = group qa_portal_dev
 	push = group user/Alexey Galkin (molecul)
+	label-Code-Review = -2..+2 group qa_portal_dev
 	label-Code-Review = -2..+2 group user/Alexey Galkin (molecul)
 	label-Verified = -1..+1 group user/Alexey Galkin (molecul)
+	rebase = group qa_portal_dev
 	rebase = group user/Alexey Galkin (molecul)
+	removeReviewer = group qa_portal_dev
 	removeReviewer = group user/Alexey Galkin (molecul)
+	submit = group qa_portal_dev
 	submit = group user/Alexey Galkin (molecul)
 [access "refs/heads/*"]
+	read = group qa_portal_dev
 	read = group user/Alexey Galkin (molecul)
+	create = group qa_portal_dev
 	create = group user/Alexey Galkin (molecul)
+	push = +force group qa_portal_dev
 	push = +force group user/Alexey Galkin (molecul)
+	pushMerge = group qa_portal_dev
 	pushMerge = group user/Alexey Galkin (molecul)
 [access "refs/tags/*"]
+	push = +force group qa_portal_dev
 	push = group user/Alexey Galkin (molecul)
 	push = +force group user/Alexey Galkin (molecul)
