--- a/etc/challenges/test_max/settings.yml
+++ b/etc/challenges/test_max/settings.yml
@@ -2,3 +2,5 @@ name: Test maximum
 image: images/pytest
 # if cmd not specifed, used image cmd
 cmd: "./check.sh"
+points: 100
+targetpath: answer.py
