--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Compiled Object files, Static and Dynamic libs (Shared Objects)
+qa_portal
 *.o
 *.a
 *.so
@@ -28,3 +29,4 @@ _testmain.go
 *.prof
 
 *.idea
+nohup.out
